--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "alembic>=1.16.1",
     "fastapi[all]>=0.115.12",
     "geopy>=2.4.1",
+    "gunicorn>=23.0.0",
     "sqlalchemy>=2.0.41",
 ]
